Modify to use list of URLs as input

--- a/FactCheck_references.ipynb
+++ b/FactCheck_references.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "FactCheck_references.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCn436A2YCFd6ZvenR0IBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +57,7 @@
         "    !pip install beautifulsoup4\n",
         "    from bs4 import BeautifulSoup"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,9 +79,10 @@
         "colab": {}
       },
       "source": [
-        "url_sub = \"https://www.factcheck.org/2020/08/trump-touts-misleading-and-flawed-excess-mortality-statistic/\""
+        "lsturl_sub = [\"https://www.factcheck.org/2020/08/republican-convention-night-3/\", \n",
+        "              \"https://www.factcheck.org/2020/08/final-night-of-the-republican-convention/\"]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,71 +102,64 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 51
         },
-        "outputId": "6ab40d82-b6c5-43b3-86e0-b6e280d70d3e"
+        "outputId": "b3bd1205-79cf-46b1-9536-2c93d7c7751a"
       },
       "source": [
-        "page_sub = BeautifulSoup(requests.get(url_sub).content, 'html.parser')\n",
+        "for url_sub in lsturl_sub:\n",
+        "  page_sub = BeautifulSoup(requests.get(url_sub).content, 'html.parser')\n",
         "\n",
-        "# Author\n",
-        "lstAuthors = []\n",
-        "for strAuthor in page_sub.findAll(attrs={'class' : 'author url fn'}):\n",
-        "    lstAuthors.append(strAuthor.contents[0])\n",
-        "if len(lstAuthors)==1:\n",
-        "    strFirstAuthor = lstAuthors[0]\n",
-        "    strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')]\n",
-        "elif len(lstAuthors)==2:\n",
-        "    strFirstAuthor = lstAuthors[0]\n",
-        "    strSecondAuthor = lstAuthors[1]\n",
-        "    strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')] + ' and ' +\\\n",
-        "                strSecondAuthor[strSecondAuthor.find(' ')+1:] + ', ' + strSecondAuthor[:strSecondAuthor.find(' ')]\n",
-        "else:\n",
-        "    strFirstAuthor = lstAuthors[0]\n",
-        "    strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')] + ' et. al'\n",
-        "    \n",
-        "# Title\n",
-        "strTitle = page_sub.find(attrs={'class' : 'entry-title'}).contents[0]\n",
-        "# strTitle_tagged = \n",
+        "  # Author\n",
+        "  lstAuthors = []\n",
+        "  for strAuthor in page_sub.findAll(attrs={'class' : 'author url fn'}):\n",
+        "      lstAuthors.append(strAuthor.contents[0])\n",
+        "  if len(lstAuthors)==1:\n",
+        "      strFirstAuthor = lstAuthors[0]\n",
+        "      strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')]\n",
+        "  elif len(lstAuthors)==2:\n",
+        "      strFirstAuthor = lstAuthors[0]\n",
+        "      strSecondAuthor = lstAuthors[1]\n",
+        "      strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')] + ' and ' +\\\n",
+        "                  strSecondAuthor[strSecondAuthor.find(' ')+1:] + ', ' + strSecondAuthor[:strSecondAuthor.find(' ')]\n",
+        "  else:\n",
+        "      strFirstAuthor = lstAuthors[0]\n",
+        "      strAuthor = strFirstAuthor[strFirstAuthor.find(' ')+1:] + ', ' + strFirstAuthor[:strFirstAuthor.find(' ')] + ' et. al'\n",
+        "      \n",
+        "  # Title\n",
+        "  strTitle = page_sub.find(attrs={'class' : 'entry-title'}).contents[0]\n",
+        "  # strTitle_tagged = \n",
         "\n",
-        "# Date\n",
-        "strDate = page_sub.find(attrs={'class' : 'entry-date published updated'}).contents[0]\n",
-        "strDate = datetime.strptime(strDate, '%B %d, %Y').strftime(\"%-d %b %Y\")\n",
+        "  # Date\n",
+        "  strDate = page_sub.find(attrs={'class' : 'entry-date published updated'}).contents[0]\n",
+        "  strDate = datetime.strptime(strDate, '%B %d, %Y').strftime(\"%-d %b %Y\")\n",
         "\n",
-        "# Put it all together\n",
-        "strFCReference = '{AUTHOR}. \"{TITLE}.\" FactCheck.org. {DATE}.'\n",
+        "  # Put it all together\n",
+        "  strFCReference = '{AUTHOR}. \"{TITLE}.\" FactCheck.org. {DATE}.'\n",
         "\n",
-        "# Plain text with no hyperlinks or nothin'\n",
-        "print(strFCReference.format(AUTHOR = strAuthor,\n",
-        "                            TITLE = strTitle,\n",
-        "                            DATE = strDate))\n",
-        "print()\n",
+        "  # # Plain text with no hyperlinks or nothin'\n",
+        "  # print(strFCReference.format(AUTHOR = strAuthor,\n",
+        "  #                             TITLE = strTitle,\n",
+        "  #                             DATE = strDate))\n",
+        "  # print()\n",
         "\n",
-        "# Reference with embedded hyperlink\n",
-        "strReference_tagged = strFCReference.format(AUTHOR = strAuthor,\n",
-        "                                            TITLE = \"<a href='{href}'>\"+strTitle+\"</a>\",\n",
-        "                                            DATE = strDate)\n",
-        "display(HTML(strReference_tagged.format(href=url_sub)))\n",
-        "print()\n",
+        "  # Reference with embedded hyperlink\n",
+        "  strReference_tagged = strFCReference.format(AUTHOR = strAuthor,\n",
+        "                                              TITLE = \"<a href='{href}'>\"+strTitle+\"</a>\",\n",
+        "                                              DATE = strDate)\n",
+        "  display(HTML(strReference_tagged.format(href=url_sub)))\n",
+        "  # print()\n",
         "\n",
-        "# Reference with HTML hyperlink tags\n",
-        "print(strReference_tagged.format(href=url_sub))"
+        "  # # Reference with HTML hyperlink tags\n",
+        "  # print(strReference_tagged.format(href=url_sub))\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "McDonald, Jessica. \"Trump Touts Misleading and Flawed Excess Mortality Statistic.\" FactCheck.org. 24 Aug 2020.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "McDonald, Jessica. \"<a href='https://www.factcheck.org/2020/08/trump-touts-misleading-and-flawed-excess-mortality-statistic/'>Trump Touts Misleading and Flawed Excess Mortality Statistic</a>.\" FactCheck.org. 24 Aug 2020."
+              "Jackson, Brooks et. al. \"<a href='https://www.factcheck.org/2020/08/republican-convention-night-3/'>Republican Convention Night 3</a>.\" FactCheck.org. 27 Aug 2020."
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -177,12 +170,18 @@
           }
         },
         {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "McDonald, Jessica. \"<a href='https://www.factcheck.org/2020/08/trump-touts-misleading-and-flawed-excess-mortality-statistic/'>Trump Touts Misleading and Flawed Excess Mortality Statistic</a>.\" FactCheck.org. 24 Aug 2020.\n"
-          ],
-          "name": "stdout"
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "Jackson, Brooks et. al. \"<a href='https://www.factcheck.org/2020/08/final-night-of-the-republican-convention/'>Final Night of the Republican Convention</a>.\" FactCheck.org. 28 Aug 2020."
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
